# paperweave

./: .dockerignore  .env_exemple  .gitignore  Dockerfile  README.md  langflow.env  pyproject.toml  requirements.txt  setup.py
data/: 1706.03762v7.md  1810.04805v2.md  2410.10630v1.md  2411.17703v1.md
data/transcripts/: transcript_1706.03762v7.0.txt  transcript_1706.03762v7.3.txt  transcript_1706.03762v7.4.txt  transcript_1706.03762v7.5.txt  transcript_1810.04805v2.0.txt  transcript_2404.19756v4.0.txt  transcript_2410.10630v1.0.txt  transcript_2411.17703v1.0.txt
notebooks/: 1706.03762.json  demo.ipynb  demo_E.ipynb
scripts/: elena.py  eval.py  example_test.py  podcast_graph.py  run_v1.py  stuff.py  stuff3.py  stuff4.py  stuff5.py  stuff6.py
src/app/: ui.py
src/components/data/: docling.py  docling_component.py
src/flows/: simple agent.json
src/paperweave/: data_type.py  data_type_direct_llm_call.py  example1.py  get_data.py  model.py  transforms.py
src/paperweave/evaluation/: eval.py
src/paperweave/flow_elements/: flows.py  podcast_graph.py  prompt_templates.py
src/paperweave/graph/: extraction_and_intro.py  get_question.py  utterance_and_interaction.py
src/paperweave/transforms/: string_extract.py
